[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [".git", ".tox", "build", "lib"]
addopts = ["--disable-socket", "--allow-unix-socket"]

[tool.coverage.run]
branch = true
omit = [
    "examples.py",
]

[tool.coverage.paths]
source = [
    "pyicloud/",
    "tests/"
]

[tool.isort]
profile = "black"

[tool.tox]
requires = ["tox>=4.24.1"]
env_list = ["lint", "3.13", "3.12", "3.11", "3.10"]

[tool.tox.env_run_base]
description = "Run test under {base_python}"
commands = [["pytest"]]
deps = ["-r requirements_test.txt"]

[tool.tox.gh-actions]
python = '''
    3.10: 3.10, lint
    3.11: 3.11
    3.12: 3.12
    3.13: 3.13
'''

[tool.setuptools_scm]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyicloud-secure"
version = "2.0.3+security.1"
readme = "README.md"
description = "Security-hardened PyiCloud fork with encrypted session storage and enhanced authentication security."
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "The PyiCloud Authors"},
    {name = "TechMaster ⚡", email = "noreply@anthropic.com"}
]
dependencies = [
    "cryptography>=41.0.0",
    "keyring>=24.0.0", 
    "fido2>=1.1.0",
    "requests>=2.31.0",
    "srp>=1.0.18",
    "tzlocal>=4.3",
    "six",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries"
]
keywords = ["icloud", "find-my-iphone"]


[project.urls]
homepage = "https://github.com/gmadsen/pyicloud-secure"
download = "https://github.com/gmadsen/pyicloud-secure/releases/latest"  
bug_tracker = "https://github.com/gmadsen/pyicloud-secure/issues"
repository = "https://github.com/gmadsen/pyicloud-secure"
upstream = "https://github.com/timlaing/pyicloud"

[project.scripts]
icloud = "pyicloud.cmdline:main"

[tool.hatch.build.targets.wheel]
packages = ["pyicloud"]

[project.optional-dependencies]
test = [
    "pytest>=7.4.0",
    "pytest-socket>=0.6.0", 
    "pytest-cov>=4.1.0",
    "coverage>=7.2.0",
]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]
